Wrap nav items on smaller screens and fix nav image sizing

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -5,21 +5,31 @@
   &__image {
     margin: auto;
     width: 50%;
-    min-width: 20rem;
+    
+    @media (max-width: $breakpoint-sm) {
+      width: 100%;
+    }
   }
 
   &__list {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 1rem;
 
+    width: 80%;
+    padding: 0;
+    margin: 0 auto;
+    
     list-style: none;
+    text-align: center;
+
+    @media (max-width: $breakpoint-sm) {
+      grid-template-columns: 1fr 1fr;
+    }
   }
 
   &__item {
     cursor: pointer;
-    margin: 0 20px;
 
     a {
       transition: color 250ms ease-out;
